--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,9 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
     rel="stylesheet"
   />
-  <title>A React Landing Page Template</title>
+  <title>AgriTrade FZ-LLC</title>
   <meta name="description" content="" />
-  <meta name="author" content="@Issaafalkattan" />
+  <meta name="author" content="@Tazwar" />
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
