--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
     rel="stylesheet"
   />
-  <title>AgriTrade FZ-LLC</title>
+  <title>Agri Flora FZ-LLC</title>
   <meta name="description" content="" />
   <meta name="author" content="@Tazwar" />
 </head>
